# QRpubsub

barcode/: CMakeLists.txt  README.txt  package.xml
barcode/msg/: qrdata.msg
barcode/src/: Imgpub.cpp  main.cpp  textprep.cpp
qr_sub/: CMakeLists.txt  package.xml
qr_sub/src/: textprep.cpp
